# zinc-cli

./: .gitignore  AGENT_PLAYBOOKS.md  CHANGELOG.md  COMMAND_CONTRACT_V1.md  CONTRIBUTING.md  Cargo.toml  README.md  SCHEMAS.md  SECURITY.md  USAGE.md  rustfmt.toml
.github/workflows/: ci.yml
.jules/: sentinel.md
assets/: zinc-cli-logo.ans
demo/: README.md  env.sh
demo/scripts/: benchmark.sh  run_demo.sh
examples/: agent_client.py  agent_client.ts
src/: cli.rs  config.rs  config_resolver.rs  dashboard.rs  error.rs  lock.rs  main.rs  network_retry.rs  output.rs  paths.rs  utils.rs  utils.rs.orig  wallet_service.rs
src/commands/: account.rs  address.rs  balance.rs  config.rs  doctor.rs  inscription.rs  lock.rs  mod.rs  offer.rs  psbt.rs  scenario.rs  setup.rs  snapshot.rs  sync.rs  tx.rs  version.rs  wait.rs  wallet.rs
src/dashboard/: events.rs  render.rs  state.rs  tasks.rs
src/presenter/: account.rs  address.rs  balance.rs  config.rs  grid.rs  inscription.rs  mod.rs  snapshot.rs  thumbnail.rs  tx.rs  wallet.rs
src/ui/: ascii_art.rs  mod.rs
src/ui/snapshots/: zinc_cli__ui__widgets__tests__dashboard_fragment_w100.snap  zinc_cli__ui__widgets__tests__dashboard_fragment_w120.snap  zinc_cli__ui__widgets__tests__dashboard_fragment_w80.snap
src/ui/widgets/: balance.rs  controls.rs  glass_panel.rs  header.rs  inscription.rs  mod.rs  modals.rs  shared.rs
src/wizard/: mod.rs  panic_hook.rs  state.rs  tui.rs
tests/: agent_flow.rs  cli_snapshots.rs  contract_v1.rs  offer_live.rs
tests/snapshots/: cli_snapshots__cli_help_json.snap  cli_snapshots__inscription_list_no_wallet_json.snap
